# ampp

./: .gitignore  .mailmap  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  libtool
.claude/: settings.local.json
.git_hooks/: post-checkout
agents/: upgrade_to_std.md
am++/: am++.hpp  basic_coalesced_message_type.hpp  counter_coalesced_message_type.hpp  dummy_buffer_sorter.hpp  lock_free_coalesced_message_type.hpp  lock_free_coalesced_message_type_packed.hpp  make_mpi_datatype.hpp  mattern_channel_counting_termination_detector.hpp  message_queue.hpp  message_type_generators.hpp  mpi_transport.hpp  object_based_addressing.hpp  reductions.hpp  scoped_epoch.hpp  size_coalesced_message_type.hpp  termination_detector.hpp  traits.hpp  transport.hpp
am++/detail/: amortized_hook.hpp  append_buffer.hpp  buffer_cache.hpp  factory_wrapper.hpp  mpi_global_lock.hpp  mpi_pool.hpp  mpi_request_manager.hpp  signal.hpp  term_detect_level_manager.hpp  thread_support.hpp  typed_in_place_factory_owning.hpp  vector_of_noncopyable.hpp
cmake/: amppConfig.cmake.in  config.h.cmake.in  libampp.pc.in
doc/html/: tutorial.cpp
m4/: ampp_debugging.m4  ampp_threading.m4  ax_boost_base.m4
src/: CMakeLists.txt  mpi_make_mpi_datatype.cpp  mpi_sinha_kale_ramkumar_termination_detector.cpp  mpi_sinha_kale_ramkumar_termination_detector_bgp.cpp  mpi_transport.cpp  termination_detector.cpp  transport.cpp
tests/: CMakeLists.txt  fib-example.cpp  rmat_graph_generator_faster.hpp  test_bfs  test_bfs.cpp  test_bfs_threaded.cpp  test_matvec.cpp  test_matvec_t.cpp  test_message_priority.cpp  test_pingpong.cpp  test_ring.cpp  test_triangle_count.cpp  testbuffer.cpp  testsizebuffer.cpp  tutorial.cpp
tests/unit/: test_append_buffer.cpp  test_append_buffer_threaded.cpp  test_id_assigner.cpp  test_id_assigner_first_principles.cpp  test_signal.cpp  test_signal_first_principles.cpp  test_type_info_map.cpp  test_typed_in_place_factory.cpp  test_vector_of_noncopyable.cpp
webpage/: index.rst
webpage/html/: index.html
